tests/chrono/fail_stable/incomplete.stderr
error: Incomplete %f specifier:
At "{%.s}"
     ^^
 --> $DIR/incomplete.rs:2:26
  |
2 |     sscanf::scanf!("hi", "{%.s}", DateTime);
  |                          ^^^^^^^

error: Incomplete %z specifier:
At "{%:b}"
     ^^
 --> $DIR/incomplete.rs:3:26
  |
3 |     sscanf::scanf!("hi", "{%:b}", DateTime);
  |                          ^^^^^^^

error: Incomplete chrono format '%'. Literal '%' need to be escaped as '%%':
At "{%:}"
     ^^
 --> $DIR/incomplete.rs:4:26
  |
4 |     sscanf::scanf!("hi", "{%:}", DateTime);
  |                          ^^^^^^

error: Incomplete %f specifier:
At "{%.3a}"
     ^^^
 --> $DIR/incomplete.rs:5:26
  |
5 |     sscanf::scanf!("hi", "{%.3a}", DateTime);
  |                          ^^^^^^^^

error: Incomplete %f specifier:
At "{%38}"
     ^^
 --> $DIR/incomplete.rs:6:26
  |
6 |     sscanf::scanf!("hi", "{%38}", DateTime);
  |                          ^^^^^^^

error: Incomplete chrono format '%'. Literal '%' need to be escaped as '%%':
At "{%}"
     ^
 --> $DIR/incomplete.rs:7:26
  |
7 |     sscanf::scanf!("hi", "{%}", DateTime);
  |                          ^^^^^

error: Incomplete chrono format '%'. Literal '%' need to be escaped as '%%':
At "{%%%}"
       ^
 --> $DIR/incomplete.rs:8:26
  |
8 |     sscanf::scanf!("hi", "{%%%}", DateTime);
  |                          ^^^^^^^
